<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile"
    android:background="@color/backgroundopacity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/backgroundopacity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:tint="#FFFFFF"
            app:srcCompat="@drawable/waclogo"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:id="@+id/relativeinner"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/machine_learning"
                android:textColor="@color/white"

                android:textSize="20sp" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/profilebtn"
                android:text="@string/enroll1"
                android:textSize="15sp" />
            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"

                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/data_science"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/profilebtn"
                android:text="@string/enroll2"
                android:textSize="15sp" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/android_development"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/profilebtn"
                android:text="@string/enroll3"
                android:textSize="15sp" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:layout_height="2dp" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/machine_learing"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/profilebtn"
                android:text="@string/enroll4"
                android:textSize="15sp" />






         </LinearLayout>


     </LinearLayout>

    </ScrollView>




</RelativeLayout>