<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singup"
    android:background="@mipmap/background2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:background="@color/backgroundopacity">

                <ImageView
                    android:id="@+id/iconwac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/waclogo"
                    android:tint="@color/white"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/todo" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:textColorHint="#FFFFFF"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/your_name"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:textColorHint="#FFFFFF"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/contact_no"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:textColorHint="#FFFFFF"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/email_id"
                    android:inputType="textPersonName"
                    android:paddingBottom="10dp"
                    android:textColorHint="#FFFFFF"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/backgroundeditview"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="10dp"
                    android:textColorHint="#FFFFFF"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#8103A9F4"
                    android:text="@string/register"
                    android:onClick="register"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

        </LinearLayout>















</RelativeLayout>













